Assign Automatic Weights fails with Mirror Modifier + Vertex Groups X Symmetry on #81745

Closed
opened 2020-10-15 18:50:57 +02:00 by Demeter Dzadik · 11 comments
Member

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.20

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-10-12 22:51, hash: dc71ad0624

Short description of error
Trying to assign automatic weights on this mesh assigns nothing to most of the bones, unless the Mirror modifier is applied or Sidebar(Weight Paint mode)->Symmetry->Vertex Groups X Symmetry option is disabled.

Exact steps for others to reproduce the error

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.20 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-10-12 22:51, hash: `dc71ad0624` **Short description of error** Trying to assign automatic weights on this mesh assigns nothing to most of the bones, unless the Mirror modifier is applied or **Sidebar(Weight Paint mode)->Symmetry->Vertex Groups X Symmetry** option is disabled. **Exact steps for others to reproduce the error** - [assign_automatic_bones_mirror_bug.blend](https://archive.blender.org/developer/F8995289/assign_automatic_bones_mirror_bug.blend) - Run Assign Automatic Weights operator. - See how only the Spine bones in the center have any weights.
Author
Member

Added subscriber: @Mets

Added subscriber: @Mets

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I confirm that assigning weights via Weight Paint -> Weights -> Assign Automatic from Bones does not work properly.
However assign weights via Object Mode -> Object -> Parent -> With Automatic Weights works well.

I'm not sure if these operators should work the same way but it does really look like a bug.

I confirm that assigning weights via `Weight Paint -> Weights -> Assign Automatic from Bones` does not work properly. However assign weights via `Object Mode -> Object -> Parent -> With Automatic Weights` works well. I'm not sure if these operators should work the same way but it does really look like a bug.
Author
Member

I also noticed that weight painting with a mirror modifier doesn't seem to behave properly at all, I think it's related. Campbell suggested my troubles might be related to 5502517c3c but I have yet to test (and I'm about to, I was just setting up blender building at my home windows PC, so things might take a while)

Update:
On 5502517c3c everything works as in current master. (not good)
A few commits back, a0f6da0abc6fefc6a679d8182b673e7c5ad3fdde, still has the issue. I'm quite surprised it's been broken for this long, I guess I haven't been relying on Mirror modifier for a while?

I went back an arbitrary amount of time to at least confirm that this used to work at some point in time, but then I just get build errors (I guess my libraries end up being too recent or something...)

For now it looks like I'll be applying my mirror modifiers. >.>

I also noticed that weight painting with a mirror modifier doesn't seem to behave properly at all, I think it's related. Campbell suggested my troubles might be related to `5502517c3c` but I have yet to test (and I'm about to, I was just setting up blender building at my home windows PC, so things might take a while) Update: On `5502517c3c` everything works as in current master. (not good) A few commits back, `a0f6da0abc6fefc6a679d8182b673e7c5ad3fdde`, still has the issue. I'm quite surprised it's been broken for this long, I guess I haven't been relying on Mirror modifier for a while? I went back an arbitrary amount of time to at least confirm that this used to work at some point in time, but then I just get build errors (I guess my libraries end up being too recent or something...) For now it looks like I'll be applying my mirror modifiers. >.>

Added subscriber: @LucianoMunoz

Added subscriber: @LucianoMunoz

I confirm that assigning weights via Weight Paint -> Weights -> Assign Automatic from Bones does not work properly.
However assign weights via Object Mode -> Object -> Parent -> With Automatic Weights works well.

As far as i remember the first one has to be done in a very weird way to make it work, i would think they'll tell lyou its not a bug because it works, its just really clunky to get to work.

@Mets i've reported that bug ages ago, but somehow they always win the argument with "that's how its supposed to be", to the point that i just use bay raitt's mirror weights addon., but yes that would be a big improvement if it was fixed.

> I confirm that assigning weights via `Weight Paint -> Weights -> Assign Automatic from Bones` does not work properly. > However assign weights via `Object Mode -> Object -> Parent -> With Automatic Weights` works well. As far as i remember the first one has to be done in a very weird way to make it work, i would think they'll tell lyou its not a bug because it works, its just really clunky to get to work. @Mets i've reported that bug ages ago, but somehow they always win the argument with "that's how its supposed to be", to the point that i just use bay raitt's mirror weights addon., but yes that would be a big improvement if it was fixed.
Author
Member

@LucianoMunoz Interesting! I've never run into this before. In that case though, let me derail my own report a little bit (I can open a separate report for this after, if it turns out worthwhile) and ask, have you run into this behaviour as well:

On the video below, even though I have X-Mirror turned off and Mirror modifier removed, as long as Auto-Normalize is turned on and bones have symmetrical names, I cannot paint weights higher than 0.5, because it's trying to paint into two vertex groups at once. This basically renders weight paint mode unusable for me, and I have no idea what is causing it. I can't reproduce it on a simple cube.

3kvmPHA8US.mp4
(check'em F9000000)

Edit: I figured this out, this was caused by an issue tackled in D9287. It is also relevant to the original report; When "Vertex Groups X Symmetry" is disabled, automatic weights works correctly. I will add this to the original post.

@LucianoMunoz Interesting! I've never run into this before. In that case though, let me derail my own report a little bit (I can open a separate report for this after, if it turns out worthwhile) and ask, have you run into this behaviour as well: On the video below, even though I have X-Mirror turned off and Mirror modifier removed, as long as Auto-Normalize is turned on and bones have symmetrical names, I cannot paint weights higher than 0.5, because it's trying to paint into two vertex groups at once. This basically renders weight paint mode unusable for me, and I have no idea what is causing it. I can't reproduce it on a simple cube. [3kvmPHA8US.mp4](https://archive.blender.org/developer/F9000000/3kvmPHA8US.mp4) (check'em [F9000000](https://archive.blender.org/developer/F9000000/3kvmPHA8US.mp4)) Edit: I figured this out, this was caused by an issue tackled in [D9287](https://archive.blender.org/developer/D9287). It is also relevant to the original report; When "Vertex Groups X Symmetry" is disabled, automatic weights works correctly. I will add this to the original post.
Demeter Dzadik changed title from Assign Automatic Weights has no effect on mirrored bones with Mirror modifier to Assign Automatic Weights fails with Mirror Modifier + Vertex Groups X Symmetry on 2020-10-20 18:24:54 +02:00

Added subscriber: @rwman

Added subscriber: @rwman
Sybren A. Stüvel self-assigned this 2020-12-07 15:40:07 +01:00

This issue was referenced by c51a70537b

This issue was referenced by c51a70537b12946bd8e7e66d29ef438a41a8801a

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81745
No description provided.